--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    direction: rtl;
+    direction: auto;
     color: blueviolet;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
@@ -10,9 +10,47 @@ td,
 th {
     border: solid 1px chocolate;
     padding: 5px;
-    }
+}
 
 table {
+    direction: rtl;
     margin: auto;
 }
 
+label {
+    direction: rtl;
+    font-size: 25px;
+    text-align: center;
+    margin: 10px;
+}
+
+
+figure {
+    /* border: solid 0.5px red; */
+    margin: 10px;
+    padding: 10px;
+    display: inline-block;
+    text-align: center;
+}
+
+h3 {
+    text-align: center;
+    width: 50%;
+    margin: 10px auto;
+}
+
+img {
+    width: 400px;
+    height: 400px;
+    border-radius: 10px;
+    border: double 2px red;
+    margin: 10px;
+}
+
+form {
+    direction: rtl;
+    font-size: 25px;
+    text-align: center;
+    margin: 10px;
+
+}
